# ZenithEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  README.md
Demos/FlappyBird/: CMakeLists.txt
Demos/FlappyBird/src/: FlappyBirdApp.cpp
Demos/TestApp/: CMakeLists.txt
Demos/TestApp/src/: TestApp.cpp  TestApp.h  WinMain.cpp
ZenithEngine/: CMakeLists.txt
ZenithEngine/src/: ZenithEngine.h  zenithpch.h
ZenithEngine/src/Zenith/: API.h
ZenithEngine/src/Zenith/App/: Window.cpp  Window.h
ZenithEngine/src/Zenith/AssetManager/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h
ZenithEngine/src/Zenith/Input/: EventListener.h  Input.cpp  Input.h  Key.h  Mouse.cpp  Mouse.h
ZenithEngine/src/Zenith/Platform/DirectX/: D3D11BatchRenderer.cpp  D3D11BatchRenderer.h  D3D11Bindable.cpp  D3D11Bindable.h  D3D11Graphics.cpp  D3D11Graphics.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11Shader.cpp  D3D11Shader.h  D3D11Texture2D.cpp  D3D11Texture2D.h  DxgiInfoManager.cpp  DxgiInfoManager.h
ZenithEngine/src/Zenith/Platform/DirectX/Shaders/: SpritePS.hlsl  SpriteVS.hlsl
ZenithEngine/src/Zenith/Platform/OpenGL/: OpenGLBatchRenderer.cpp  OpenGLBatchRenderer.h  OpenGLGraphics.cpp  OpenGLGraphics.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h
ZenithEngine/src/Zenith/Renderer/: BatchRenderer.cpp  BatchRenderer.h  Bindable.h  Graphics.cpp  Graphics.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  Viewport.cpp  Viewport.h
ZenithEngine/src/Zenith/Renderer/UI/: UIRenderer.cpp  UIRenderer.h
ZenithEngine/src/Zenith/Utils/: UUID.cpp  UUID.h  ZenithUtils.cpp  ZenithUtils.h
